# robot_eval_logger

./: .gitignore  .pre-commit-config.yaml  DATA_FORMAT.md  LICENSE  README.md  pyproject.toml  setup.py
examples/: dummy_eval.py  manipulator_eval.py
robot_eval_logger/: __init__.py  eval_logger.py  utils.py
robot_eval_logger/storage/: __init__.py  base_saver.py  hugging_face.py  local.py
robot_eval_logger/time/: __init__.py  time_logger.py
robot_eval_logger/typing/: __init__.py  eval_metadata.py  traj_data.py
robot_eval_logger/visualize/: __init__.py  visualize_frames.py  wandb.py
tests/: conftest.py  test_data_format_validator.py  test_storage_optimizations.py  test_time_logger.py
